--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <!-- <script src="./Easy/mergeSortedArray.js"></script> -->
-    <script src="./Easy/palindrome.js"></script>
+    <script src="./Blind75/validPalindrome.js"></script>
   </body>
 </html>
